examples/test/testpolicy144.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy144
  namespace: namespace388
spec:
  podSelector:
    matchLabels:
      key46: value20
      key37: value16
      key48: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value37
          key44: value29
      podSelector:
        matchLabels:
          key45: value23
          key10: value6
          key24: value31
